[gd_scene load_steps=4 format=3 uid="uid://o2dlkmafi2p5"]

[ext_resource type="Script" uid="uid://b46813usn0bam" path="res://packer.gd" id="1_jnx15"]
[ext_resource type="PackedScene" uid="uid://t4mnbtf2o7gr" path="res://texture_load.tscn" id="1_ttoxs"]
[ext_resource type="PackedScene" uid="uid://c37yub63oic0l" path="res://channel_select.tscn" id="3_y0w5b"]

[node name="Packer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jnx15")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorTexLayer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2
text = "Color Texture Layer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2

[node name="ColorLabel" type="Label" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2
text = "Color Texture"

[node name="Color" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorTex" parent="VBoxContainer/HBoxContainer/ColorTexLayer/Color" instance=ExtResource("1_ttoxs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="TeamLable" type="Label" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2
text = "Team Color Texture"

[node name="Team" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ColorTexLayer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TeamTex" parent="VBoxContainer/HBoxContainer/ColorTexLayer/Team" instance=ExtResource("1_ttoxs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="TeamChannel" parent="VBoxContainer/HBoxContainer/ColorTexLayer/Team" instance=ExtResource("3_y0w5b")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PBRTexLayer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
text = "Extra Texture Layer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2

[node name="EmLabel" type="Label" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
text = "Emission"

[node name="Emission" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmissionMap" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Emission" instance=ExtResource("1_ttoxs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="EmissionChannel" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Emission" instance=ExtResource("3_y0w5b")]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpecLabel" type="Label" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
text = "Specular"

[node name="Specular" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpecularMultiplier" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Specular" instance=ExtResource("1_ttoxs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpecularChannel" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Specular" instance=ExtResource("3_y0w5b")]
layout_mode = 2
size_flags_horizontal = 3

[node name="CavLabel" type="Label" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
text = "Alpha Cutout"

[node name="Cavity" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/PBRTexLayer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CavityMap" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Cavity" instance=ExtResource("1_ttoxs")]
layout_mode = 2
size_flags_horizontal = 3

[node name="CavityChannel" parent="VBoxContainer/HBoxContainer/PBRTexLayer/Cavity" instance=ExtResource("3_y0w5b")]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Pack" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Pack textures with current settings."
text = "Pack textures"

[node name="FileDialog" type="FileDialog" parent="."]
force_native = true
access = 2

[connection signal="pressed" from="VBoxContainer/Pack" to="." method="_on_pack_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
